rendered/envs/alpha/echo/ingress-echo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: echo
spec:
  rules:
    - host: echo.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: echo
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: echo.junior.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: echo
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: echo.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: echo
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: echo.junior.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: echo
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: echo.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: echo
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: echo.junior.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: echo
                port:
                  name: http
            path: /
            pathType: Prefix
